[Enhancement] Estimate histogram equality by share and string IN values outside the MCV by the tail
column = constant with a histogram took the smaller of the rows the
histogram counted for the value and the value's share of the rows at
hand. On a table that grew since the histogram was collected, or with a
histogram of the whole table on a scan pruned to some partitions, the
estimate stuck at the count of collection time. It now takes the share,
as IN does already.

A string column has no buckets, so IN with a value outside the MCV list
estimated it as a tenth of the average rows per value over the whole
column, while column = constant spread the rows outside the MCV list
over the distinct values outside it. IN now does the same, so the two
agree on such a value.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01B4tKbvsczNMX95DdLrhKWP
Signed-off-by: Evgeniy Shishkin <eshishki@gmail.com>